<resources>
    <string name="app_name">FirebaseApp</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="feed">Feed</string>
    <string name="new_post">New Post</string>
    <string name="post">Post</string>
    <string name="type_here">Type here</string>
    <string name="empty_post_message">Post cannot be empty. Please add some content!</string>
    <string name="empty_comment_message">Comment cannot be empty. Please add some content!</string>
    <string name="posted_successfully">Posted successfully!</string>
    <string name="posting_failed">Posted could not be saved to the database!</string>
    <string name="post_details">Post Details</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add Comment</string>
    <string name="comment">Comment…</string>
    <string name="facebook_app_id">852459568902917</string>
    <string name="fb_login_protocol_scheme">fb852459568902917</string>
    <string name="enter_your_phone_number">Enter Number</string>
    <string name="password">XXXXXX</string>
    <string name="dont_have_account">Sign Up Here</string>
    <string name="email">noemail@email.ca</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In/Sign Up</string>
    <string name="image_chooser_title">Complete action using</string>
    <string name="back_button">Back</string>

</resources>