<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.EmailLogin.EmailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">



        <EditText
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="16dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@color/colorPrimaryDark"
        android:padding="16dp"
        android:text="@string/dont_have_account"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_back2"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_above="@+id/btn_sign_up"


        android:layout_alignParentStart="true"
        android:layout_marginStart="-6dp"
        android:layout_marginTop="379dp"
        android:layout_marginBottom="9dp"
        android:text="@string/back_button" />


</RelativeLayout>